[package]
authors = ["Matt Ickstadt <mattico8@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "miscomp-repro"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-log = { version = "~0.6", features = ["semihosting", "log-integration"] }
panic-semihosting = { version = "0.5.3" }
cortex-m-semihosting = { version = "0.3.5", features = ["jlink-quirks"]}
log = "0.4.11"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[dependencies.stm32h7xx-hal]
features = ["stm32h743v", "rt", "sdmmc"]
path = "stm32h7xx-hal"

[profile.release]
debug = true # symbols are nice and they don't increase the size on Flash
